syntax = "proto3";


package auth;

option go_package = "./internals/proto";


service AuthService{
   rpc Register (RegisterRequest) returns (RegisterResponse) {}
   rpc Login (LoginRequest) returns (LoginResponse) {}
   rpc Validate (ValidateRequest) returns (ValidateResponse) {}
   rpc SendOTP (OTPRequest)  returns (OTPResponse) {}
   rpc Verify (VerifyOTPRequest) returns (VerifyOTPResponse) {}
   rpc Logout (LogoutRequest) returns (LogoutResponse) {}
}

message RegisterRequest {
   string name = 1;
   string email = 2;
   string password = 3;
   string role = 4;
}

message RegisterResponse {
   int64 status = 1;
   string message = 2;
}

message ValidateRequest {
   string token = 1;
}

message ValidateResponse {
   int64 status = 1;
   string error = 2;
   int64 user_id = 3;
}

message LoginRequest {
   string email = 1;
   string password = 2;
   string role = 3;
}

message LoginResponse {
   int64 status = 1;
   string message = 2;
   string token = 3;
}

message OTPRequest {
   string email = 1;
   string role = 2;
}

message OTPResponse {
   int64 status = 1;
   string message = 2;
   int64 expires_in = 3;
}

message VerifyOTPRequest {
   string email = 1;
   string otp = 2;
}

message VerifyOTPResponse {
   int64 status = 1;
   string message = 2;
}

message LogoutRequest {}

message LogoutResponse {
   int64 status = 1;
   string message = 2;
}